Git ignore file was a little overzealous and blocked the Lua makefiles from being committed. Woops.

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,15 @@
 *.suo
 
 # unix makefiles
-Makefile
-*.make
+/Makefile
+/*.make
 
 # binaries and object files
 /bin/*
 /obj/*
 
 # linux libs autobuilding
-lib/linux/*.a
-lib/src/lua-5.1.4/src/*.o
-lib/src/lua-5.1.4/src/lua*
-lib/src/lua-5.1.4/src/liblua.a
+/lib/linux/*.a
+/lib/src/lua-5.1.4/src/*.o
+/lib/src/lua-5.1.4/src/lua*
+/lib/src/lua-5.1.4/src/liblua.a
